# subsonic-types

./: Cargo.toml  README.md  README.tpl  get-genres.json  renovate.json
examples/: ping.rs  proxy.rs
src/: common.rs  helper.rs  lib.rs  macros.rs  main.rs  query.rs  response.rs  traits.rs  types.rs  wrapper.rs  xml.rs
src/deser/: deserialize.rs  error.rs  flat.rs  format.rs  maybe_serialize.rs  mod.rs  serialize.rs  traits.rs  value.rs  versioned.rs  wrapper.rs  xml.rs
src/request/: annotation.rs  bookmark.rs  browsing.rs  chat.rs  jubebox.rs  jukebox.rs  lists.rs  mod.rs  playlists.rs  podcast.rs  radio.rs  retrieval.rs  scan.rs  search.rs  sharing.rs  system.rs  user.rs
src/request/query/: de.rs  mod.rs  ser.rs
src/response/: mod.rs
subsonic-macro/: Cargo.toml
subsonic-macro/src/: attr.rs  common.rs  lib.rs  subsonic_request.rs  subsonic_type.rs  util.rs  version.rs
subsonic-macro/src/query/: mod.rs
subsonic-macro/src/request/: mod.rs
subsonic-macro/src/response/: attr.rs  container.rs  deserialize.rs  format.rs  mod.rs  serialize.rs
subsonic-types-macro/: Cargo.toml
subsonic-types-macro/src/: attr.rs  lib.rs  subsonic_type.rs  util.rs  version.rs
subsonic-types-macro/src/query/: mod.rs
subsonic-types-macro/src/response/: deserialize.rs  mod.rs
tests/: examples.rs  get-artists.json  get-artists.rs  get-genres.rs  get-lyrics.json  get-lyrics.rs  get-playlist.json  get-playlist.rs  get-playlists.json  get-playlists.rs  get-random-songs.json  get-random-songs.rs
