[package]
name = "subsonic-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subsonic-macro = { path = "./subsonic-macro" }

quick-xml = { version = "0.27.1", features = ["serde", "serialize"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
time = { version = "0.3.19", features = ["parsing", "macros", "serde", "formatting"] }
percent-encoding = "2.2.0"
serde-value = "0.7.0"
