[package]
name = "subsonic-types"
version = "0.1.0"
edition = "2021"
description = "Types for the Subsonic API"
categories = ["api-bindings"]
homepage = "https://github.com/diogo464/subsonic-types"
repository = "https://github.com/diogo464/subsonic-types"
keywords = ["subsonic", "music", "api", "types"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subsonic-types-macro = { version = "0.0.0", path = "./subsonic-types-macro" }
time = { version = "0.3", features = [
    "parsing",
    "macros",
    "serde",
    "formatting",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
quick-xml = { version = "0.27", features = ["serde", "serialize"] }
percent-encoding = "2.2"
ordered-float = "3.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
