[package]
name = "subsonic-types-macro"
version = "0.0.0"
edition = "2021"
description = "Internal macros for subsonic-types"
homepage = "https://github.com/diogo464/subsonic-types"
repository = "https://github.com/diogo464/subsonic-types"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "1", features = ["parsing", "printing", "extra-traits"] }
